# ADR_TX1

./: README.md
fcc_serial/: CMakeLists.txt  package.xml
fcc_serial/src/: DefineList.h  fcc_serial_node.cpp  fcc_serial_node.cpp.orig  fcc_serial_node_ADEXcompetition.cpp  fcc_serial_node_IROScompetition.cpp  fcc_serial_node_KBS.cpp  fcc_serial_node_backup.cpp  fcc_serial_node_odom.cpp  fcc_serial_node_pixhawk.cpp  test.out  test_10.out  test_11.out  test_12.out  test_13.out  test_16.out  test_170905_1.out  test_170905_2.out  test_18.out  test_19.out  test_2.out  test_20.out  test_3gates.out  test_5.out
fcc_serial/src/old/: ODOM.out  fcc_serial_node_depth_avoidance.cpp  logged_data.out  test.out  test_1.out  test_14.out  test_15.out  test_17.out  test_3.out  test_4.out  test_6.out  test_7.out  test_8.out  test_9.out
gate_detector/: CMakeLists.txt  labelmap_frame_cp.prototxt  mod_alex_ssd_deploy.prototxt  mod_alex_ssd_deploy_backup.prototxt  package.xml
gate_detector/backups/: mod_alex_ssd_deploy.prototxt  mod_alex_ssd_deploy_0920.prototxt
gate_detector/src/: Gvar.h  Header.h  gate_detector.cpp  gate_detector_0920.cpp
imu_3dm_gx4/launch/: imu.launch
kalman_filter/: CMakeLists.txt  package.xml
kalman_filter/src/: .fcc_serial_node.cpp.swp  DefineList.h  FilterModule.h  fcc_serial_node_old.cpp~  kalman_filter.cpp  kf_base_1.out  kf_base_2.out  kf_base_3.out  test_1.out  test_2.out  test_kf.out  test_kf3.out  test_kt2.out
optical_flow/: CMakeLists.txt  OpticalFlowLog.out  package.xml
optical_flow/src/: Gvar.h  Header.h  OpticalFlow_LucasKanade.cpp  optical_flow.cpp  optical_flow.cpp.abb  optical_flow.cpp.orig
